5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1800_2569.log
== TEST (2019-06-08 20:15:18) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))

m = sum(x)/size(x)
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:17:43) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0
for g in range(size(x)):
	d = (((x[g]-m)**2)/n - 1)**(1/2) + d
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:18:36) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0
for g in range(size(x)):
	d = (((x[g]-m)**2)/(n - 1))**(1/2) 
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:19:02) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0
for g in range(size(x)):
	d = (((x[g]-m)**2)/(n - 1))**(1/2) + d
	d = d
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:20:00) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0
for g in range(size(x)):
	d = (((x[g]-m)**2)/(n - 1))**(1/2) 
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:20:56) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0
for g in range(size(x)):
	d = ((((x[g]-m)**2)+d)/(n-1))**(1/2) 
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 20:21:12) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0
for g in range(size(x)):
	d = ((((x[g]-m)**(2)+d)/(n-1))**(1/2) 
	print(d)
-- EXECUTION TIME:
0.76904
-- ERROR:
  File "/home/codebench/codes/1800/2569/main.py", line 9
    print(d)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:21:15) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0
for g in range(size(x)):
	d = ((((x[g]-m)**(2)+d)/(n-1))**(1/2) 
	print(d)
-- ERROR:
File "XXXX", line 9
    print(d)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:21:24) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0
for g in range(size(x)):
	d = (((x[g]-m)**(2)+d)/(n-1))**(1/2) 
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:22:41) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0
for g in range(size(x)):
	d = ((d + (x[g]-m)**2)/n-1)**(1/2)
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:23:29) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0
for g in range(size(x)):
	d = ((((x[g]-m)**2)+d)/(n-1))**(1/2) 
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:23:40) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0
for g in range(size(x)):
	d = ((((x[g]-m)**2)+d)/(n-1))**(1/2) 
	print(d*2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:24:58) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0
for g in range(size(x)):
	d = (x[g])
	print(d*2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:25:22) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0
for g in range(size(x)):
	d = (x[g]-m)
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:26:01) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0
print(m)
for g in range(size(x)):
	d = (x[g]-m)
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:26:41) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0

for g in range(size(x)):
	d = (x[g]-m)**2
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:27:04) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0

for g in range(size(x)):
	d = (x[g]-m)**2 + d
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:27:29) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0

for g in range(size(x)):
	d = ((x[g]-m)**2 + d)/n-1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:06:56) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0

for g in range(size(x)):
	d = ((x[g]-m)**2 + d)/n-1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:06:56) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0

for g in range(size(x)):
	d = ((x[g]-m)**2 + d)/n-1
	print(d)
-- EXECUTION TIME:
1.19861
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
752.992
7568.550399999998
2194.8220799999995
588.1164159999998
528.8552831999999
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
42.55971279999999
8.359015359999997
107.68968787200001
100.87429037439999
158.12369087488
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
Vetor: -0.9996428571428572
-1.1138775510204082
-1.1501967930029156
-1.1610995418575594
-1.1655142202653657
-1.1490020314664808
-1.1512860044952116
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:08:26) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0

for g in range(size(x)):
	d = ((x[g]-m)**2 + d)/(n-1)
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:08:26) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0

for g in range(size(x)):
	d = ((x[g]-m)**2 + d)/(n-1)
	print(d)
-- EXECUTION TIME:
0.95356
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
942.49
9509.312499999998
3229.9681249999994
995.1820312499998
764.0855078124999
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
54.44964099999999
14.671251249999997
137.44016881250002
134.780483203125
207.38116180078126
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
Vetor: 0.0004166666666666711
0.03381944444444447
0.016053240740740726
0.006425540123456772
0.0014875900205761257
0.020664598336762645
0.018444099722793802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:14:20) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0

for g in range(size(x)):
	d = (((x[g]-m)**2 + d)/(n-1))
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:14:42) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0

for g in range(size(x)):
	d = ((x[g]-m)**2 + d)/(n-1)
d = d**(1/2)	
	
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:15:12) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0

for g in range(size(x)):
	d = d+(x[g]-m)**2/(n-1)
d = d**(1/2)	
	
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:15:32) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0

for g in range(size(x)):
	d = d+(x[g]-m)**2/(n-1)
d = d**(1/2)	
	
print(round(d, 3)
-- ERROR:
File "XXXX", line 13
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:15:35) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0

for g in range(size(x)):
	d = d+(x[g]-m)**2/(n-1)
d = d**(1/2)	
	
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:15:39) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor: ")))
n = size(x)
m = sum(x)/n
d = 0

for g in range(size(x)):
	d = d+(x[g]-m)**2/(n-1)
d = d**(1/2)	
	
print(round(d, 3))
-- EXECUTION TIME:
1.09599
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
